src/tests/snapshots/gitu__tests__stage__selected_lines_are_marked.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 On branch main                                                                 |
 Your branch is ahead of 'origin/main' by 1 commit(s).                          |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1,2 +1,2 @@                                                                |
 -testing                                                                       |
 -testtest                                                                      |
▌+weehooo                                                                       |
▌+blrergh                                                                       |
                                                                                |
 Recent commits                                                                 |
 223428c main add firstfile                                      Author Name __ |
 b66a0bf origin/main add initial-file                            Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 65ce56e430d2c0ac
