src/tests/snapshots/gitu__tests__stage__stage_all_unstaged.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
▌Staged changes (2)                                                             |
▌modified   firstfile…                                                          |
▌modified   secondfile…                                                         |
                                                                                |
 Recent commits                                                                 |
 0c2c6c3 main add secondfile                                                    |
 223428c add firstfile                                                          |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git add -u .                                                                  |
styles_hash: 716b23f209d66c05
