src/tests/snapshots/gitu__tests__stage__stage_changes_crlf.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
▌modified   testfile                                                            |
▌@@ -1,2 +1,2 @@                                                                |
▌-testing                                                                       |
▌+test                                                                          |
▌ testtest                                                                      |
                                                                                |
 Recent commits                                                                 |
 bbe772c main add testfile                                                      |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 79f371519247f4c
