src/tests/snapshots/gitu__tests__stage__stage_deleted_executable_file.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Staged changes (1)                                                             |
▌deleted    script.sh…                                                          |
                                                                                |
 Recent commits                                                                 |
 af83421 main add executable script                                             |
 289f1e5 add script.sh                                                          |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git add script.sh                                                             |
styles_hash: e7e96991f04c4a6f
