src/tests/snapshots/gitu__tests__stage__stage_deleted_file.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Staged changes (1)                                                             |
▌deleted    to-delete…                                                          |
                                                                                |
 Recent commits                                                                 |
 0341425 main add to-delete                                                     |
 b66a0bf origin/main add initial-file                                           |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
────────────────────────────────────────────────────────────────────────────────|
$ git add to-delete                                                             |
styles_hash: a540901e0039ef31
