src/tests/snapshots/gitu__tests__stage__stage_removed_line.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
 main                                                                           |
                                                                                |
 Unstaged changes (1)                                                           |
 modified   firstfile                                                           |
 @@ -1 +1,2 @@                                                                  |
▌-testtest                                                                      |
 +weehooo                                                                       |
 +blrergh                                                                       |
                                                                                |
 Staged changes (1)                                                             |
 modified   firstfile                                                           |
 @@ -1,2 +1 @@                                                                  |
 -testing                                                                       |
  testtest                                                                      |
                                                                                |
 Recent commits                                                                 |
 223428c main add firstfile                                                     |
 b66a0bf origin/main add initial-file                                           |
────────────────────────────────────────────────────────────────────────────────|
$ git apply --cached --recount                                                  |
styles_hash: 7888c6daee2582b4
