src/tests/snapshots/gitu__tests__stage__staged_file.snap
---
source: src/tests/stage.rs
expression: ctx.redact_buffer()
---
▌On branch main                                                                 |
▌Your branch is up to date with 'origin/main'.                                  |
                                                                                |
 Staged changes (1)                                                             |
 added      new-file                                                            |
                                                                                |
 Recent commits                                                                 |
 b66a0bf main origin/main add initial-file                       Author Name __ |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
                                                                                |
styles_hash: 99868aa2f9d8803e
